changed layout of home screen and included fields for previous walk

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,8 +10,16 @@
     <string name="title_activity_start_page">StartPage</string>
     <string name="mile_name">miles</string>
     <string name="home_text">Home</string>
-    <string name="dist">Distance</string>
-    <string name="stepsTaken">Steps Taken</string>
+    <string name="dist">Distance:</string>
+    <string name="totalStepsTaken">Total Steps Taken:</string>
+    <string name="totalDist">Total Distance:</string>
     <string name="step">Steps</string>
+    <string name="steps">Steps:</string>
+    <string name="time">Time:</string>
+    <string name="today">Today</string>
+    <string name="prev_Walk">Previous Walk</string>
+
+
+
 </resources>
 
