--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,11 +1,10 @@
-
 <resources>
     <string name="app_name">Team 12 WWR</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_intentional_walk">IntentionalWalkActivity</string>
     <string name="intentional_walk_time">Time: </string>
     <string name="intentional_walk_steps">Steps: </string>
-    <string name="intentional_walk_distance">Distance: </string>    
+    <string name="intentional_walk_distance">Distance: </string>
 
     <string name="title_activity_start_page">StartPage</string>
     <string name="mile_name">miles</string>
@@ -18,7 +17,7 @@
     <string name="time">Time:</string>
     <string name="today">Today</string>
     <string name="prev_Walk">Previous Walk</string>
-
+    <string name="title_activity_route_screen">RouteScreen</string>
 
 
 </resources>
