--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Team 12 WWR</string>
-    <string name="action_settings">Settings</string>
+    <string name="debug_walk">Debug Walk</string>
     <string name="title_activity_intentional_walk">IntentionalWalkActivity</string>
     <string name="intentional_walk_time">Time: </string>
     <string name="intentional_walk_steps">Steps: </string>
