--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -135,6 +135,7 @@
     <string name="route_edit_hint">Name of Route</string>
     <string name="start_edit_hint">Where you started</string>
     <string name="end_edit_hint">Where you ended</string>
+    <string name="title_activity_team_screen">My Team</string>
 
 
 </resources>
