--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,9 +50,10 @@
     <string name="title_route">Routes</string>
     <string name="title_walk">Walks</string>
     <string name="title_team">Team</string>
+
     <string name="title_activity_team_individ_routes">TeamIndividRoutes</string>
-    <string name="tab_text_1">Tab 1</string>
-    <string name="tab_text_2">Tab 2</string>
+    <string name="tab_text_1">Your Routes</string>
+    <string name="tab_text_2">Team Routes</string>
 
 
 </resources>
